--- a/footer.html
+++ b/footer.html
@@ -1,115 +1,84 @@
-
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" a href="css/bootstrap.css"/>
-  <link rel="stylesheet" a href="css/fonts.css"/>
-  <title>Document</title>
-</head>
-<body>
-  <!-- Footer -->
-<footer class="page-footer font-small" style="background-color: #002c5c;">
-  <!-- Footer Links -->
-  <div class="container text-center text-md-left mt" style="padding-top: 50px;">
-    <!-- Grid row -->
-    <div class="row">
-      <!-- Grid column -->
-      <div class="col-md-3">
-        <!-- Content -->
-        <h6 class="text-uppercase font-weight-bold">OUR ADDRESS</h6>
-        <p>Derine Salanza <br/> Motila Drive, Lagos, Nigeria.</p>
-      </div>
-      <!-- Grid column -->
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-      <!-- Grid column -->
-      <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mb-3">
-        <!-- Links -->
-        <h6 class="text-uppercase font-weight-bold">RESERVATION</h6>
-        <p>Telephone: (+234) 222-333-5851 <br/>
-		Email: reservations@derinesalanza.com</p>
-      </div>
-      <!-- Grid column -->
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
+    <title>Hello, world!</title>
+  </head>
+  <body>
+	<!-- Start your project here--> 
 	
-      <!-- Grid column -->
-      <div class="col-md-6 col-lg-4 col-xl-4 mx-auto mb-md-0 mb-5">
-        <!-- Links -->
-        <h6 class="text-uppercase font-weight-bold">SUBSCRIBE TO OUR NEWS LETTER</h6>
-		<div class="input-group mb-3">
-		  <input type="text" class="form-control" placeholder="Email Address..." aria-label="Email Address"
-			aria-describedby="basic-addon2" style="color: #ffffff; background-color: #002c5c;">
-		  <div class="input-group-append">
-			<span class="input-group-text success-color text-white" id="basic-addon2"><b>Submit</b></span>
+	
+	
+	
+	
+	
+	<!-- Footer -->
+	<footer class="page-footer font-small" style="background-color: #002c5c;">
+	  <div class="container text-center text-md-left mt text-white" style="padding-top: 50px;">
+		<div class="row">
+		  <div class="col-md-3">
+			<h6 class="text-uppercase font-weight-bold">OUR ADDRESS</h6>
+			<p>Derine Salanza <br/> Motila Drive, Lagos, Nigeria.</p>
+		  </div>
+		  
+		  <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mb-3">
+			<h6 class="text-uppercase font-weight-bold">RESERVATION</h6>
+			<p>Telephone: (+234) 222-333-5851 <br/>
+			Email: reservations@derinesalanza.com</p>
+		  </div>
+		  
+		  <div class="col-md-6 col-lg-4 col-xl-4 mx-auto mb-md-0 mb-5">
+			<h6 class="text-uppercase font-weight-bold">SUBSCRIBE TO OUR NEWS LETTER</h6>
+			<div class="input-group mb-3">
+			  <input type="text" class="form-control" placeholder="Email Address..." aria-label="Email Address"
+				aria-describedby="basic-addon2" style="color: #ffffff; background-color: #002c5c;">
+			  <div class="input-group-append">
+				<span class="input-group-text text-white" id="basic-addon2" style="background: #00c851;"><b>Submit</b></span>
+			  </div>
+			</div>
 		  </div>
 		</div>
 		
-      </div>
-      <!-- Grid column -->
+	  </div>
+	  
+	  <hr class=" " style="background: white;">
+	  <div style="background-color: #002c5c;">
+		<div class="container">
+		  <div class="row py-4 d-flex align-items-center text-white">
+			<div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
+			  <p class="mb-0">
+			  © 2020 Derine Salanza Hotel &nbsp;&nbsp;&nbsp;&nbsp;
+			  <a href="#" style="color: white;">Terms</a> &nbsp;&nbsp;&nbsp;&nbsp;
+			  <a href="#" style="color: white;">Privacy</a> &nbsp;&nbsp;&nbsp;&nbsp;
+			  <a href="#" style="color: white;"><b>English</b></a>
+			  </p> 
+			</div>
+			
+			<div class="col-md-6 col-lg-7 text-center text-md-right">
+			  <a class="fb-ic"> <i class="fab fa-facebook-f white-text mr-1"> </i> </a>
+			  <a class="tw-ic"> <i class="fab fa-twitter white-text mr-1"> </i> </a>
+			  <a class="li-ic"> <i class="fab fa-linkedin-in white-text mr-1"> </i> </a>
+			  <a class="pinterest-ic"> <i class="fab fa-pinterest white-text mr-1"> </i> </a>
+			  <a class="ins-ic"> <i class="fab fa-instagram white-text mr-5"> </i> </a>
+			</div>
+		  </div>
+		</div>
+	  </div>
 
-    </div>
-    <!-- Grid row -->
-
-  </div>
-  <!-- Footer Links -->
-
-  <!-- Copyright -->
-  <hr class="white">
-  <div style="background-color: #002c5c;">
-    <div class="container">
-
-      <!-- Grid row-->
-      <div class="row py-4 d-flex align-items-center">
-
-        <!-- Grid column -->
-        <div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
-          <p class="mb-0">
-		  © 2020 Derine Salanza Hotel &nbsp;&nbsp;&nbsp;&nbsp;
-		  <a href="#">Terms</a> &nbsp;&nbsp;&nbsp;&nbsp;
-		  <a href="#">Privacy</a> &nbsp;&nbsp;&nbsp;&nbsp;
-		  <a href="#"><b>English</b></a>
-		  </p> 
-        </div>
-        <!-- Grid column -->
-
-        <!-- Grid column -->
-        <div class="col-md-6 col-lg-7 text-center text-md-right">
-          <!-- Facebook -->
-          <a class="fb-ic">
-            <i class="fab fa-facebook-f white-text mr-1"> </i>
-          </a>
-          <!-- Twitter -->
-          <a class="tw-ic">
-            <i class="fab fa-twitter white-text mr-1"> </i>
-          </a>
-          <!--Linkedin -->
-          <a class="li-ic">
-            <i class="fab fa-linkedin-in white-text mr-1"> </i>
-          </a>
-		  <!-- Pintrest +-->
-          <a class="pinterest-ic">
-            <i class="fab fa-pinterest white-text mr-1"> </i>
-          </a>
-          <!--Instagram-->
-          <a class="ins-ic">
-            <i class="fab fa-instagram white-text mr-5"> </i>
-          </a>
-        </div>
-        <!-- Grid column -->
-      </div>
-      <!-- Grid row-->
-    </div>
-  </div>
-  <!-- Copyright -->
-
-</footer>
-<!-- Footer -->
-
-<script src="js/jquerybootstrap.js"></script>
-<script src="js/propper.js"></script>
-<script src="js/bootstrap.js"></script>
-</body>
+	</footer>
+	<!-- Footer -->
+<!-- End your project here--> 
+	
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+  </body>
 </html>
-
-
